fixed modal bug on mobile and shift more things towards mobile first design

--- a/client/src/components/Modal.css
+++ b/client/src/components/Modal.css
@@ -15,10 +15,9 @@
     border: solid 1px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px #cccccc;
     border-radius: 5px;
-    /* position: inherit; */
     position: fixed;
-    top: 35%;
-    left: 30%;
+    left: 3%;
+    top: 20%;
     width: 85%;
     display: flex;
     flex-direction: column;
@@ -28,6 +27,8 @@
 @media only screen and (min-width: 1080px) {
     #modal {
         width: 38%;
+        top: 35%;
+        left: 30%;
     }
 }
 #noteTitleModal {
