--- a/client/src/components/Note.css
+++ b/client/src/components/Note.css
@@ -1,11 +1,16 @@
 .noteBox{
     background: #fff;
-    margin: 5%;
     border-radius: 5px;
+    margin: 3% 1% 3% 1%;
     padding: 3%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+}
+@media only screen and (min-width: 1080px) {
+    .noteBox {
+        margin: 5%;
+    }
 }
 #noteTitle{
     font-size: 20px;
